[tool.poetry]
name = "lesson-7"
version = "0.1.0"
description = "Lesson 7 of Software Engineering Foundations"
authors = ["Emily Flynn <emily.flynn@softwire.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-timeout = "^2.1.0"

[tool.pytest.ini_options]
timeout = 20

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
